--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/swagger": "^11.1.5",
     "bcrypt": "^5.1.1",
     "buffer-to-stream": "^1.0.0",
     "cloudinary": "^2.5.1"
